--- a/app/views/movies/title_header.html.haml
+++ b/app/views/movies/title_header.html.haml
@@ -1,17 +1,16 @@
--#  This file is app/views/movies/index.html.haml
+-#  This file is app/views/movies/title_header.html.haml
 %h1 All Movies
 
 %table#movies
   %thead
     %tr
-      %th
-        = link_to "Movie Title", movies_path(:sort => "title"), :id => "title_header"
+      %th {:class => hillite} 
+        %a(href="movies/title_header.html")Movie Title
       %th Rating
-      %th
-        = link_to "Release Date", movies_path(:sort => "release_date"), :id => "release_date_header"
+      %th <a href= "movies/release_date_header">Release Date</a>
       %th More Info
   %tbody
-    - @movies.each do |movie|
+    - @movies.each.order("movie.title") do |movie|
       %tr
         %td= movie.title 
         %td= movie.rating
