Hwk 2, Q1, PtB: Set column header background to yellow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,8 +44,8 @@ table#movies th {
   font-weight: bold;
   background-color: wheat;
 }
-table#movies th.hillite {
-  background-colour: yellow;
+table#movies th.hilite {
+  background: yellow;
 }
 table#movies th, table#movies td {
   padding: 4px;
