--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,10 +4,10 @@
 %table#movies
   %thead
     %tr
-      %th
+      %th{:class => ('hilite' if @sort == 'title') }
         = link_to "Movie Title", movies_path(:sort => "title"), :id => "title_header"
       %th Rating
-      %th
+      %th{:class => ('hilite' if @sort == 'release_date') }
         = link_to "Release Date", movies_path(:sort => "release_date"), :id => "release_date_header"
       %th More Info
   %tbody
