--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,17 +1,17 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-= form_tag movies_path, :method => :get do
+= form_tag#ratings_form movies_path, :method => :get do
   Include: 
   - if params[:ratings].nil?
     - @all_ratings.each do |rating|
       = rating
-      = check_box_tag "ratings[#{rating}]", 1 , true
+      = check_box_tag#ratings_#{rating} "ratings[#{rating}]", 1 , true
   - else
     - @all_ratings.each do |rating|
       = rating
-      = check_box_tag "ratings[#{rating}]", 1 , params[:ratings].has_key?(rating)
-  = submit_tag 'Refresh'
+      = check_box_tag#ratings_#{rating} "ratings[#{rating}]", 1 , params[:ratings].has_key?(rating)
+  = submit_tag#ratings_submits 'Refresh'
 
 %table#movies
   %thead
